2002-11-02  gunter  <techgunter@yahoo.com>

	* file_selection.c, file_selection.h, gtk-splitter.c:
	Added support for reading file names from the command-line.

2002-10-20  gunter  <techgunter@yahoo.com>

	* md5.c, md5.h, split.c:
	Worked on getting md5sum working for file verification.

2002-10-18  gunter  <techgunter@yahoo.com>

	* callbacks.c, combine.c:
	Fixed two bugs introduced when dynamic string allocation was dropped.

	* callbacks.c, callbacks.h, combine.c, combine.h, dostextfile.c,
	  dostextfile.h, error.c, file_selection.c, file_selection.h, globals.h, 
	  gtk-splitter.c, progress.c, split.c, split.h:
	Cleaned up the comments.  Changed variable names to make the code easier to
	read.

	* configure.in, callbacks.c, combine.c, file_selection.c, globals.h,
	  gtk-splitter.c, split.c:
	Removed mechanisms for dynamically allocating memory for strings.  Memory
	is used more efficiently with dynamic allocation, but the code is much
	harder to read and understand.  The strings are now a fixed size
	determined by PATH_MAX in <limits.h>.

2002-09-04  gunter  <techgunter@yahoo.com>

	* globals.h, split.c, gtk-splitter.c:
	Modified the code to use the PACKAGE and VERSION macros provided by configure.
	Removed the old GTK_SPLITTER_VERSION macro.

2002-08-30  gunter  <techgunter@yahoo.com>

	* md5.c (new), md5.h (new), configure.in, src/Makefile.am, combine.c,
	  split.c, callbacks.c, file_selection.c, globals.h, gtk-splitter.c:
	Added support for verifying files via md5sum.

2002-08-09  gunter  <techgunter@yahoo.com>

	* Makefile.am, autogen.sh, configure.in, clean.sh, src/Makefile.am,
	  gtk-splitter.spec.in:
 	Added gtk-splitter.spec.in and made adjustments to the configure scripts to
	create an rpm of gtk-splitter.  These changes were supplied to me by 
	Panagiotis Vossos <jacbre@internet.gr>. 
	Many thanks Panagiotis!

2002-08-06  gunter  <techgunter@yahoo.com>

	* src/Makefile.am:
	Added '-lglib' flag to fix a compilation error on Solaris 8